--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/postcss": "^4.1.8",
     "firebase": "^11.8.1",
+    "ng2-pdf-viewer": "^10.4.0",
+    "ngx-extended-pdf-viewer": "^23.3.1",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
